<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mononote</string>
    <string name="more_options">More options</string>
    <string name="placeholder_text">Start typing...</string>
    <string name="done">Done</string>
    <string name="archive_note">Archive note</string>
    <string name="delete_note">Delete note</string>
    <string name="archived_notes">Archived Notes</string>
    <string name="settings">Settings</string>
    <string name="settings_section_appearance">Appearance</string>
    <string name="settings_section_note_text">Note Text</string>
    <string name="settings_section_feedback">Feedback</string>
    <string name="settings_section_about">About</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_font">Font</string>
    <string name="settings_font_default">Default</string>
    <string name="settings_font_serif">Serif</string>
    <string name="settings_font_monospace">Monospace</string>
    <string name="settings_text_size">Text size</string>
    <string name="settings_text_size_small">Small</string>
    <string name="settings_text_size_medium">Medium</string>
    <string name="settings_text_size_large">Large</string>
    <string name="settings_give_feedback">Give feedback</string>
    <string name="settings_give_feedback_subtitle">Coming soon</string>
    <string name="settings_about">About Mononote</string>
    <string name="about_mononote_title">About Mononote</string>
    <string name="about_mononote_tagline">One note. No clutter. Just what you want your future self to remember.</string>
    <string name="about_mononote_version">Version %1$s</string>
    <string name="no_archived_notes">No archived notes yet</string>
    <string name="note_archived">Note archived</string>
    <string name="note_deleted">Note deleted</string>
    <string name="delete_note_dialog_title">Delete note?</string>
    <string name="delete_note_dialog_message">This can\'t be undone.</string>
    <string name="restore">Restore</string>
    <string name="restore_note_dialog_title">Restore note?</string>
    <string name="restore_note_dialog_message">Your current note will be archived to make room.</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">%1$dm ago</string>
    <string name="hours_ago">%1$dh ago</string>
    <string name="days_ago">%1$dd ago</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="go_live">Go Live</string>
    <string name="live">Live</string>
    <string name="notification_permission_needed">Enable notifications to go live</string>
    <string name="live_updates_off_message">Live updates are off</string>
    <string name="live_updates_enable">Settings</string>
    <string name="live_notification_channel_name">Live note</string>
    <string name="live_notification_channel_description">Shows your current note as a live notification</string>
    <string name="live_service_subtype">Live note updates</string>
    <string name="mononote_widget_description">Shows your current note</string>
</resources>
